# FirstGame

./: CMakeLists.txt
Source/: main.cpp
Source/Renderer/: ShaderProgram.cpp  ShaderProgram.h
Source/Resources/: ResourcesManager.cpp  ResourcesManager.h
